fix(dependencies): 更新Guava版本